terraform-swarm/vpc.tf
resource "aws_vpc" "cinema" {
    cidr_block = var.vpc_cidr
    enable_dns_support = var.enable_dns_support
    enable_dns_hostnames = var.enable_dns_hostnames

    tags = {
        Name = var.vpc_name
    }
}

data "aws_availability_zones" "available" {
    state = "available"
}
